配置字段改为中文